2007-12-20T1709  C.J. Adams-Collier  <cjac@colliertech.org>

	Overview (from Sam Hocevar): patch for gtkglarea-sharp adds
	gtk_gl_area_share_new() to the list of bindings to allow sharing
	the GL context. This way one can share textures and display lists
	between GL contexts.

	* gtkglarea/GLArea.custom
	- created c'tor which accepts a share list
	* gtkglarea/generated/GLArea.cs
	- code generated from above

2007-12-20T1709  C.J. Adams-Collier  <cjac@colliertech.org>

	Overview (from Sam Hocevar): The gtkglarea-sharp package fails to
	properly detect the gapi tools, causing "make dist" to always
	fail.

	* configure.ac
	- changing positive check for xyes to negative check for xno

2007-12-20T1705  C.J. Adams-Collier  <cjac@colliertech.org>
	
	Overview (from Sam Hocevar): Minor issue in gtkglarea-sharp's
	PickWidget.cs: the right mouse button is ignored upon press, but
	not upon release, leading to weird behaviour.

	* examples/pick-object/PickWidget.cs
	- ignoring right mouse button on release

2007-12-20T1649  C.J. Adams-Collier  <cjac@colliertech.org>

	Overview (from Sam Hocevar): The gtkglarea-sharp build process
	expects a Tao.OpenGl.pc file, but such a file doesn't exist
	anywhere AFAIK. The Tao Debian packages use tao-opengl.pc for
	consistency so I suggest using the same naming scheme
	(see also http://www.taoframework.com/node/432 for a discussion
	with the Tao maintainers about this).

	* configure.ac, examples/Include.am, examples/lwo/Makefile.am
	- s/Tao.OpenGl/tao-opengl/g
	
2007-12-20T1642  C.J. Adams-Collier  <cjac@colliertech.org>

	Overview: Applied some patches supplied by Sam Hocevar
	
	* AUTHORS
	- added Sam Hocevar
	* configure.ac
	- put a $ in front of a variable :)
	* examples/shapes/Teapot.cs, examples/rotate-buttons/OldTeapot.cs
	- changed data structures to conform to new API

2007-04-23T06:35  C.J. Adams-Collier  <cjac@colliertech.org>
	* gtkglarea/Makefile.am
	- removed generated-stamp and generated/* from CLEANFILES